# ChangeLog for Keychain; http://www.gentoo.org/projects/keychain
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL version 2
# Written by Daniel Robbins (drobbins@gentoo.org)

* keychain 1.9 (04 Mar 2002)

  04 Mar 2002; added "keychain.cygwin" for Cygwin systems.  It may be time to
  follow this pattern and start building separate, optimized scripts for each
  platform so they don't get too sluggish.  Maybe I could use a C preprocessor
  for this.
  
  06 Dec 2001; several people: Solaris doesn't like '-e' comparisons; switched
  to '-f'

* keychain 1.8 (29 Nov 2001)

  29 Nov 2001; Philip Hallstrom (philip@adhesivemedia.com)
  Added a "--local" option for removing the ${HOSTNAME} from the various
  files that keychain creates.  Handy for non-NFS users.
  
  29 Nov 2001; Aron Griffis (agriffis@gentoo.org)
  Using the Bourne shell "type" builtin rather than using the external
  "which" command.  Should make things a lot more robust and slightly
  faster.
  
  09 Nov 2001; Mike Briseno (mike@radik.com)
  Solaris' "which" command outputs "no lockfile in..." to stdout rather
  than stderr.  A one-line fix (test the error condition) has been
  applied.

  09 Nov 2001; lockfile settings tweak

  09 Nov 2001; Rewrote how keychain detects failed passphrase attempts.
  If you stop making progress providing valid passphrases, it's three
  strikes and you're out.

  09 Nov 2001; Constantine P. Sapuntzakis (csapuntz@stanford.edu)
  Some private keys can't be "ssh-keygen -l -f"'d; this patch causes
  keychain to look for the corresponding public key if the private
  key doesn't work.  Thanks Constantine!

  09 Nov 2001; Victor Leitman (vleitman@yahoo.com)
  CYAN color misdefined; fixed.
  
  27 Oct 2001; Brian Wellington (bwelling@xbill.org)
  A "quiet mode" (--quiet) fix; I missed an "echo".
  
  27 Oct 2001; J.A. Neitzel (jan@belvento.org)
  Missed another "kill -9"; it's now gone.

* keychain 1.7 (21 Oct 2001) 
 