@@ -1,10 +1,10 @@
 #!/bin/sh
-# Copyright 1999-2001 Gentoo Technologies, Inc.
-# Distributed under the terms of the GNU General Public License, v2 or later
+# Copyright 1999-2002 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
 # Author: Daniel Robbins <drobbins@gentoo.org>
 # $Header$
 
-version=1.8
+version=1.9
 
 trap "" INT || { echo "$0: warning: trapping signal 2 instead of INT" 1>&2; trap "" 2; }
 PATH="/sbin:/usr/sbin:${PATH}:/usr/ucb"; export PATH;
